[project]
name = "critictubes"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Georg Pernice", email = "georgpernice@gmail.com"},
]
dependencies = ["numpy>=2.4.1", "pdm>=2.26.6", "openfactcheck>=0.3.15", "youtube-transcript-api>=1.2.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
